tests/errors/macro/parser_unexpected_grid/kw_behind_long_comment.c
int a = 1; /*long
comment*/#define a 0

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
